feat(styles/mixin): add smooth-transition mixin

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,4 @@
+@import './_globals.scss';
 @import './_colors.scss';
 @import './_typography.scss';
-
-:root {
-  font-size: 16px; // 1rem
-}
+@import './_mixins.scss';
