--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -10,6 +10,7 @@ $grey-500: #ACADB9;
 $grey-300: #D5D6DC;
 $grey-200: #EAEBED;
 $grey-100: #F5F5F6;
+$grey-background: #F7F7F8;
 
 $white: #FFFFFF;
 
