--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -2,6 +2,11 @@
   font-size: 16px; // 1rem
 }
 
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 a {
   text-decoration: none;
   color: inherit;
