--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -45,7 +45,7 @@
 
 .text-base-m-bold {
   @extend %font-base;
-  font-weight: normal; // 400
+  font-weight: bold; // 700
   font-size: 1rem; // 16px
   line-height: 118.75%; // 19px
 }
