--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -11,3 +11,11 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+}
