feat(pages/JobsPage): lay out jobs page

--- a/src/common/components/Layout/Layout.module.scss
+++ b/src/common/components/Layout/Layout.module.scss
@@ -12,6 +12,7 @@
 }
 
 .sectionContent {
+  width: 100%;
   max-width: 71.75rem; // 1100px = 1440px - 2 * 162px + 2 * padding-x
   padding: 0 1rem; // 16px
   margin: 0 auto;
