--- a/src/common/components/JobsFilter/IndustryFilter/IndustryFilter.module.scss
+++ b/src/common/components/JobsFilter/IndustryFilter/IndustryFilter.module.scss
@@ -1,4 +1,5 @@
 @import 'styles/_typography.scss';
+@import 'styles/_components.scss';
 
 .label {
   @extend .text-base-m-bold;
@@ -6,9 +7,7 @@
 }
 
 .input {
+  @extend %input;
   height: 2.625rem; // 42px
   padding: 0.6875rem 0.75rem; // 11px 12px
-  border-radius: 0.5rem; // 8px
-
-  @extend .subtitle-s-regular;
 }
