fix(styles): add right padding to all inputs to avoid text collisions

--- a/src/components/search/JobsFilter/SalaryRangeFilter/SalaryRangeFilter.module.scss
+++ b/src/components/search/JobsFilter/SalaryRangeFilter/SalaryRangeFilter.module.scss
@@ -19,6 +19,7 @@ $shevron-padding: 0.0625rem; // 1px
   @extend %input;
   height: 2.625rem; // 42px
   padding: 0.6875rem 0.75rem; // 11px 12px
+  padding-right: 2.125rem; // 34px
 }
 
 .controls {
