--- a/src/components/search/SearchBar/SearchBar.module.scss
+++ b/src/components/search/SearchBar/SearchBar.module.scss
@@ -13,6 +13,7 @@
   width: 100%;
   height: 3rem; // 48px
   padding: 0.84375rem 0.75rem; // 13.5px 12px
+  padding-right: 6.5rem; // 104px
 }
 
 .submitBtn {
