fix(components/JobDescription): minor fix in styles

--- a/src/components/jobs/JobDescription/JobDescription.module.scss
+++ b/src/components/jobs/JobDescription/JobDescription.module.scss
@@ -12,15 +12,18 @@
   flex-direction: column;
   row-gap: 1.25rem; // 20px
 
+  @extend .text-base-m-regular;
+
   ul,
   ol {
     margin-top: -0.25rem; // -4px
   }
 
-  p {
-    @extend .title-s-bold;
+  b {
+    @extend .text-base-m-bold;
   }
 
+  p,
   li {
     @extend .text-base-m-regular;
   }
