--- a/src/components/common/Layout/Layout.module.scss
+++ b/src/components/common/Layout/Layout.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  padding-top: 5.25rem; // 84px;
 }
 
 .section {
@@ -19,6 +20,15 @@
 }
 
 .header {
+  height: 5.25rem; // 84px
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
   background-color: $white;
 }
 
