--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -5,6 +5,7 @@ $blue-300: #B7D6FF;
 $blue-200: #C9E0FF;
 $blue-100: #DEECFF;
 
+$grey-900: #343A40;
 $grey-600: #7B7C88;
 $grey-500: #ACADB9;
 $grey-300: #D5D6DC;
