--- a/src/pages/jobs/JobsPage.module.scss
+++ b/src/pages/jobs/JobsPage.module.scss
@@ -1,23 +1,45 @@
 .wrapper {
   width: 100%;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 19.6875rem auto; // 315px auto
+  grid-template-rows: repeat(3, auto);
+  grid-template-areas: 
+    "filters searchBar"
+    "filters jobs"
+    "filters pagination";
   column-gap: 1.75rem; // 28px
-}
-
-.aside {
-  flex: 0 0 19.6875rem; // 315px
-}
-
-.main {
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
   row-gap: 1rem; // 16px;
+}
+
+.filters {
+  grid-area: filters;
+}
+
+.searchBar {
+  grid-area: searchBar;
 }
 
 .jobs {
+  grid-area: jobs;
   display: flex;
   flex-direction: column;
   row-gap: 1rem; // 16px;
+}
+
+.pagination {
+  grid-area: pagination;
+}
+
+@media (max-width: 60rem /* 960px */) {
+  .wrapper {
+    max-width: 33rem; // 528px
+    margin: 0 auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, auto);
+    grid-template-areas:
+      "searchBar"
+      "filters"
+      "jobs"
+      "pagination";
+  }
 }
