--- a/src/components/jobs/JobCard/JobCard.module.scss
+++ b/src/components/jobs/JobCard/JobCard.module.scss
@@ -1,33 +1,42 @@
 @import 'styles/_colors.scss';
 
 .wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: auto 1.5rem; // auto 24px
+  grid-template-rows: repeat(3, auto);
+  column-gap: 1rem; // 16px
+  grid-template-areas:
+    "title favoriteBtn"
+    "conditions empty"
+    "location empty";
+  
+  &.link {
+    row-gap: 0.75rem; // 12px
+  }
+  
+  &.opened {
+    row-gap: 1rem; // 16px
+  }
 
   width: 100%;
   padding: 1.5rem; // 24px;
   background-color: $white;
   border: 1px solid $grey-200;
   border-radius: 0.75rem; // 12px;
-
-  &.link {
-    .main {
-      row-gap: 0.75rem; // 12px
-    }
-  }
-  
-  &.opened {
-    .main {
-      row-gap: 1rem; // 16px
-    }
-  }
 }
 
-.main {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+.title {
+  grid-area: title;
 }
 
+.favoriteBtn {
+  grid-area: favoriteBtn;
+}
+
+.conditions {
+  grid-area: conditions;
+}
+
+.location {
+  grid-area: location;
+}
